# karim-flam-trombone

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: btstack_config.h
lib/btstack-audio-pico/: btstack_audio_pico.c
src/: audio.S  main.cpp
